nu med diplomer

--- a/multiplication-game/src/index.html
+++ b/multiplication-game/src/index.html
@@ -25,10 +25,34 @@
         <button id="submit">Tjek svar</button>
         <p id="feedback"></p>
         <div id="stats">
-            <p>Korrekte svar: <span id="correct-count">0</span></p>
+            <p>Om <span id="correct-count">10</span> korrekte svar, får du et diplom</p>
             <p>Brugt tid: <span id="time-spent">0</span> sekunder</p>
         </div>
     </div>
+    <div class="diploma hidden" id="dip1">
+        <h1>🎀 DIPLOM 🎀</h1>
+        <p class="emoji">🎉 TILLYKKE, WILMA! 🎉</p>
+        <p>Du har svaret rigtigt på <strong>10 opgaver i træk</strong> uden fejl!</p>
+        <p>Du er super sej – fortsæt det gode arbejde! 💪✨</p>
+        <p>Hold fast, for når du når <strong>20</strong>, venter en endnu større belønning! 🎖️</p>
+    </div>
+
+    <div class="diploma hidden" id="dip2">
+        <h1>🏆 DIPLOM 🏆</h1>
+        <p class="emoji">🎉 WOW, WILMA! 🎉</p>
+        <p>Du har nu klaret <strong>20 opgaver i træk</strong> helt uden fejl! 🔥</p>
+        <p>Du viser ægte styrke og skarphed! 💡👏</p>
+        <p>Men vent... der er en endnu <strong>STØRRE</strong> belønning ved <strong>30</strong>! 🚀</p>
+    </div>
+
+    <div class="diploma hidden"  id="dip3">
+        <h1>🌟🏅 DIPLOM 🏅🌟</h1>
+        <p class="emoji">🎊 FANTASTISK, WILMA! 🎊</p>
+        <p>Du har svaret rigtigt på <strong>30 opgaver i træk</strong> uden fejl! 🤯🌟</p>
+        <p>Det er en imponerende præstation – du er en <strong>ægte mester i gange-tabellerne!</strong> 🏆🎉</p>
+        <p>Og ved du hvad? Din far er <strong>MEGA STOLT</strong> af dig! ❤️🎖️</p>
+    </div>
+
     <script src="scripts/app.js"></script>
 </body>
 </html>
