--- a/multiplication-game/src/index.html
+++ b/multiplication-game/src/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="game">
         <h1>Wilmas Tabeller</h1>
+        <h2> - Nu med diplomer</h2>
         <label for="table-select">Vælg en tabel:</label>
         <select id="table-select">
             <option value="all">Alle tabeller</option>
